fix: align content and title, fixed #870

--- a/packages/app/src/pages/temporary.css
+++ b/packages/app/src/pages/temporary.css
@@ -6,3 +6,6 @@
 .affine-default-page-block-container {
   width: 686px !important;
 }
+.affine-default-page-block-container > .affine-block-children-container {
+  margin-left: -26px !important;
+}
